# Ray-Tracer

./: CMakeLists.txt  README.md
Ray Tracer/: AlbedosPhong.h  CHECKLIST  Camera.cpp  Camera.h  ColourRGB.h  Image.h  Object3D.cpp  Object3D.h  Point3D.cpp  Point3D.h  PointLightSource.cpp  PointLightSource.h  Ray3D.h  RayTracer  RayTracer.cpp  RayTracer.h  RenderedImage.ppm  Report.txt  StereoCamera.cpp  StereoCamera.h  Transform3D.cpp  View.cpp  View.h  compile.sh  compileMac.sh  e1Out.txt  main.cpp  run.sh  runMac.sh  runMacML.sh  utils.h
Ray Tracer.xcodeproj/: project.pbxproj
Ray Tracer/GeometricTypes/: Point3D.cpp  Point3D.h  Transform3D.cpp  Transform3D.h
Ray Tracer/HANDIN/: CHECKLIST  MainScene.ppm  RenderedImage.ppm  Report.docx
Ray Tracer/Lights/: AreaLightElement.cpp  AreaLightElement.h
Ray Tracer/ML/: ML.h  dataGenerator.cpp  mainML.cpp
Ray Tracer/ObjectTypes/: AlbedosPhong.cpp  AlbedosPhong.h  ColourRGB.cpp  ColourRGB.h  Image.cpp  Image.h  Intersection.h  Material.cpp  Material.h  Object3D.cpp  Object3D.h  PointLightSource.cpp  PointLightSource.h  Ray3D.cpp  Ray3D.h
Ray Tracer/ObjectTypes/Object Subclasses/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Ray Tracer/ObjectTypes/ObjectSubclasses/: BoundingBox.cpp  BoundingBox.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  OBJ_Loader.h  Paraboloid.cpp  Paraboloid.h  Plane.cpp  Plane.h  PlaneLightSource.cpp  PlaneLightSource.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  TriangleMesh.cpp  TriangleMesh.h
Ray Tracer/RayTracer.dSYM/Contents/Resources/DWARF/: RayTracer
(+4 files in other folders)
